<resources>
    <string name="app_name">Q-Comics</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Войти</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Имя пользователя</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="register">Регистрация</string>
    <string name="verification">Верификация</string>
    <string name="enter_code">Введите код</string>
    <string name="enter_code_content">Мы отправили код на подтверждение вашего аккаунта на вашу почту:</string>
    <string name="enter_code_email">qwerty12@gmail.com</string>
    <string name="send_new_code_after">Отправить код снова через</string>
    <string name="send">Отправить</string>
    <string name="email_to_reset">Укажите email для сброса пароля</string>
    <string name="continue_btn">Продолжить</string>
    <string name="code_to_reset">Мы отправили код подтверждения на ваш email</string>
    <string name="code">Код</string>
    <string name="reset_password">Сброс пароля</string>
    <string name="title_home">Главная</string>
    <string name="profile">Профиль</string>
    <string name="comics">Комиксы</string>
    <string name="resend_code">Новый код</string>
    <string name="login_or_register">Логин / Регистрация</string>
    <string name="recent_updates">Последние обновления</string>
    <string name="news">Новинки</string>
    <string name="top_10">ТОП 10</string>
    <string name="studio">Студийные</string>
    <string name="authors">Авторские</string>
    <string name="all">Все</string>
    <string name="genre_fantastic">Фантастика</string>
    <string name="by_rating">По рейтингу</string>
    <string name="sorting">Сортировка</string>
    <string name="genres">Жанры</string>
    <string name="by_popularity">По популярности</string>
    <string name="search_comics">Поиск комикса</string>
    <string name="settings">Настройки</string>
    <string name="favorites">Избранное</string>
    <string name="subscribed">Подписки</string>
    <string name="downloaded">Скаченные</string>
    <string name="drama">Драма</string>
    <string name="rate">Оценить</string>
    <string name="download">Скачать</string>
    <string name="choose_all_comics">Выбрать все главы</string>
    <string name="plot">Сюжет</string>
    <string name="about_creator">О создателе</string>
    <string name="share">Поделиться</string>
    <string name="comments">Комментарии</string>
    <string name="write_something">Напишите что-нибудь</string>
    <string name="click_to_login">Нажмите чтобы войти</string>
    <string name="log_in">Войдите в аккаунт</string>
    <string name="followers">Подпичики</string>
    <string name="follow">Подписаться</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="no_comics_added">Нет добавленных комиксов</string>
    <string name="avatar">Аватар</string>
    <string name="user_name">Имя пользователя</string>
    <string name="select_from_gallery">Выбрать из Галереи</string>
    <string name="take_picture">Сфотографировать</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="confirm">Подтвердить</string>
    <string name="hint_username">Создайте никнейм для страницы вашего профиля. Ваш псевдоним может состоят из букв, цифр и специальных символов (до 20 символов).</string>
    <string name="add_favourite_comics">Добавьте ваши любимые комиксы</string>
    <string name="add_favourite_authors">Следите за любимыми авторами</string>
    <string name="download_comics">Нет загрузок</string>
    <string name="coin">монеты</string>
    <string name="language">Язык</string>
    <string name="kazakh">Казахский</string>
    <string name="feedback">Обратная связь</string>
    <string name="logout">Выйти</string>
    <string name="russian">Русский</string>
    <string name="english">Английский</string>
    <string name="no_account">Нет аккаунта? </string>
    <string name="create_account">Зарегесртироваться</string>
    <string name="comics_one">комикс</string>
    <string name="genre_name_children">Детские</string>
    <string name="genre_name_fantastic">Фантастика</string>
    <string name="genre_name_historical">Исторические</string>
    <string name="genre_name_romantic">Романтика</string>
    <string name="genre_name_drama">Драма</string>
    <string name="genre_name_adventures">Приключения</string>
    <string name="genre_name_action">Экшн</string>
    <string name="genre_name_daily">Повседневность</string>
    <string name="genre_name_comedy">Комедия</string>
    <string name="sort_option_high_rating">По рейтингу</string>
    <string name="sort_option_new">По новизне</string>
    <string name="default_string">По умолчанию</string>
    <string name="cancel">Отмена</string>
    <string name="date_hardcode">Июнь 5, 2023</string>
    <string name="downloading">Загрузка</string>
</resources>