<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.qComics.ui.main.user.UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:orientation="vertical"
            android:translationZ="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="24dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/profile"
                        android:textColor="@color/orange_text"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:translationZ="10dp"
                    app:cardBackgroundColor="@color/orange_text"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="2dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:id="@+id/header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/user_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:layout_marginEnd="8dp"
                                android:src="@drawable/ic_user_avatar"
                                android:contentDescription="@string/avatar" />

                            <TextView
                                android:id="@+id/username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toEndOf="@id/user_icon"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:text="@string/click_to_login"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                        </RelativeLayout>

                        <View
                            android:id="@+id/horizontal_divider"
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_below="@id/header"
                            android:background="@color/white" />

                        <View
                            android:id="@+id/vertical_divider"
                            android:layout_width="0.5dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/header"
                            android:layout_centerHorizontal="true"
                            android:background="@color/white" />

                        <LinearLayout
                            android:id="@+id/coin_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/header"
                            android:layout_alignEnd="@id/vertical_divider"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentBottom="true"
                            android:orientation="horizontal"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_coin"
                                android:contentDescription="@string/coin" />

                            <TextView
                                android:id="@+id/coins_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="0"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/settings_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/header"
                            android:layout_alignStart="@id/vertical_divider"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:orientation="horizontal"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_settings" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/settings"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/favorites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/favorites"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/subscriptions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/subscribed"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/downloads"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/downloaded"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_medium" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_comics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_subscriptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_downloads"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/not_logged_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="84dp"
                android:background="@drawable/bg_orange_button"
                android:text="@string/login"
                android:textAppearance="@style/some_id" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_no_favourite_comics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add_favourite_comics"
            android:textSize="16sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_no_favourite_authors"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add_favourite_authors"
            android:textSize="16sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_no_downloaded_comics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/download_comics"
            android:textSize="16sp"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>