<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_arrow_back_24" />

        <TextView
            android:id="@+id/main_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/enter_code"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="30dp"
        android:text="@string/code_to_reset"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/code"
        android:textColorHint="@color/light_gray"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/btn_resend_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/resend_code_in"
            style="@style/miniText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_new_code_after"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timer"
            style="@style/miniText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="00:20"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="84dp"
        android:background="@drawable/bg_orange_button"
        android:text="@string/continue_btn"
        android:textAppearance="@style/some_id" />

    <!--    <LinearLayout-->
    <!--        android:id="@+id/btn_resend_code"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center_horizontal"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:orientation="horizontal">-->

    <!--        <ImageView-->
    <!--            android:id="@+id/ic_key"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:src="@drawable/ic_key_inactive"/>-->

    <!--        <TextView-->
    <!--            android:id="@+id/send_new_code"-->
    <!--            style="@style/miniText"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="5dp"-->
    <!--            android:layout_marginEnd="5dp"-->
    <!--            android:text="@string/send_new_code_after"-->
    <!--            android:textColor="@color/gray_medium"/>-->

    <!--        <TextView-->
    <!--            android:id="@+id/timer"-->
    <!--            style="@style/miniText"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="00:20"-->
    <!--            android:textColor="@color/gray_medium"/>-->

    <!--    </LinearLayout>-->

</LinearLayout>